--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 02:19:00 PM</p>
+    <p class="lastupdate">09/18/2020 02:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">90.6&#176;F</td>
+        <td class="data">90.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">90.6&#176;F</td>
+        <td class="data">90.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">90.6&#176;F</td>
+        <td class="data">90.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.9&#176;F</td>
+        <td class="data">53.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.869 inHg (-0.075)</td>
+        <td class="data">29.868 inHg (-0.075)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">2 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:56:07 AM">
             74</span><br/>
-          <span title="02:03:11 PM">
-            29</span>
+          <span title="02:20:17 PM">
+            28</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:31:01 AM">
             29.968</span><br/>
-          <span title="02:10:01 PM">
-            29.869</span>
+          <span title="02:23:01 PM">
+            29.868</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 23 hours, 32 minutes</td>
+      <td class="data">16 days, 23 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 23 hours, 32 minutes</td>
+      <td class="data">16 days, 23 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
